2004-09-29  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : hide some ellipsis methods, add pass_as attrs.
	* gtk/Object.custom : new IsFloating property.
	* gtk/glue/object.c : new gtksharp_object_set_floating glue.

2004-09-29  Mike Kestner  <mkestner@ximian.com>

	* generator/GStringGen.cs : new generatable impl for GStrings.
	* generator/InterfaceGen.cs : better error reporting.
	* generator/Makefile.am : add new source file.
	* generator/Method.cs : better error reporting.
	* generator/SymbolTable.cs : add new GString igen.

2004-09-29  Mike Kestner  <mkestner@ximian.com>

	* glib/GString.cs : new marshaling class for GStrings.  Used by
	generator to map GString params and returns onto managed strings.
	* glib/Makefile.am : add new file.

2004-09-27  Mike Kestner  <mkestner@ximian.com>

	* gtk/Button.custom : add a ctor (Widget). reworked from patch by
	John Luke.
	[Fixes #66228]

2004-09-26  Mike Kestner  <mkestner@ximian.com>

	* glib/Idle.cs : proxy hash keys are uints, not ints.

2004-09-24  Mike Kestner  <mkestner@ximian.com>

	* gtk/Bin.custom : make Child get/set.
	* gtk/Gtk.metadata : hide the Bin.get_child method.
	[Fixes #66232]

2004-09-23  Mike Kestner  <mkestner@ximian.com>

	* gtk/Widget.custom : new OnSetScrollAdjustments VM. 
	* gtk/glue/widget.c : glue for new VM.

2004-09-18  Miguel de Icaza  <miguel@ximian.com>

	* glib/Source.cs: Add new base class to hold the method to be
	called, and the proxy handler we use to keep references to them
	and avoid a collection.

	Exposes a new variables that references all the active Timeouts
	and Idle handlers to avoid collection/

	* glib/Timeout.cs: Implement TimeoutProxy that acts as a filter to
	remove the proxy when the timeout is removed.

	Register a TimeoutProxy when we create a timeout.

	* glib/Idle.cs: Implement IdleProxy that acts as a filter to
	remove the proxy when the idle handler is removed.

	Register an IdleProxy when we create a timeout.
