@@ -1,3 +1,10 @@
+2004-10-05  Mike Kestner  <mkestner@ximian.com>
+
+	* gtk/Gtk.metadata : hide Selection.GetTargets.
+	* gtk/SelectionData.custom : impl Targets prop and add Selection,
+	Target, and Type field accessors.
+	* gtk/glue/selectiondata.c : field accessor glue.
+
 2004-09-29  Mike Kestner  <mkestner@ximian.com>
 
 	* gtk/Gtk.metadata : hide some ellipsis methods, add pass_as attrs.
